--- a/sass/aboutpage/_heroabout.scss
+++ b/sass/aboutpage/_heroabout.scss
@@ -51,6 +51,7 @@
           font-size: clamp(48px, 8vw, 108px);
           text-align: center;
           font-weight: 300;
+          line-height: 110.00000000000001%;
           font-family: $font-primary;
           color: $content-color-light-1;
 
@@ -70,6 +71,7 @@
           font-size: 20px;
           text-align: center;
           font-weight: 300;
+          line-height: 140%;
           font-family: $font-primary;
           color: $content-color-light-1;
 
