--- a/sass/components/_cta.scss
+++ b/sass/components/_cta.scss
@@ -34,6 +34,7 @@
   &__title {
     font-size: 40px;
     font-weight: 300;
+    line-height: 120%;
     color: $content-color-light-1;
     font-family: $font-primary;
 
@@ -139,6 +140,8 @@
 
   @media only screen and (max-width: $bp-smallest) {
     border: none;
+    padding: 0;
+    height: fit-content;
   }
 }
 
@@ -171,6 +174,22 @@
 
   .cta02__item {
     flex: 1 1 280px;
+    max-width: 320px;
+    min-width: 200px;
+    height: auto;
+  }
+}
+
+@media (max-width: $bp-smallest) {
+  .cta02-wrapper {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 48px;
+    padding: 64px 24px;
+  }
+
+  .cta02__item {
+    flex: 1 1 211px;
     max-width: 320px;
     min-width: 200px;
     height: auto;
