--- a/sass/landingpage/_featured.scss
+++ b/sass/landingpage/_featured.scss
@@ -6,6 +6,13 @@
 
   background-color: $content-color-light-1;
 
+  border-top: 1px solid $color-primary;
+  @media only screen and (max-width: $bp-smallest) {
+    padding: 64px 0;
+    height: 100%;
+    max-height: 1814px;
+  }
+
   &__header {
     display: flex;
     flex-direction: column;
@@ -15,7 +22,12 @@
     gap: 16px;
 
     width: 100%;
-    border-top: 1px solid $color-primary;
+    height: 100%;
+    max-height: 333px;
+
+    @media only screen and (max-width: $bp-smallest) {
+      padding: 0 16px;
+    }
   }
 
   &__subtitle {
@@ -35,7 +47,10 @@
       padding: 0 48px;
     }
     @media only screen and (max-width: $bp-smallest) {
-      font-size: 32px;
+      font-size: 40px;
+      line-height: 120%;
+      padding: 0;
+      padding-bottom: 48px;
     }
   }
 
@@ -52,6 +67,9 @@
     border-color: $color-primary;
     z-index: 1;
 
+    height: 100%;
+    max-height: max-content;
+
     .product-card {
       display: flex;
       flex-direction: column;
@@ -60,6 +78,8 @@
       gap: 24px;
 
       width: 480px;
+      height: 100%;
+      max-height: 688px;
 
       transition: transform 0.3s ease;
 
@@ -129,7 +149,7 @@
       .product-rating__rating {
         font-family: $font-secondary;
         font-weight: 300;
-        size: 22px;
+        font-size: 22px;
         line-height: 140%;
         color: $content-color-dark-1;
       }
@@ -340,6 +360,7 @@
     .product-card-2 {
       width: 100%;
       max-width: 375px;
+      height: 484px;
       padding: 20px;
     }
 
@@ -400,6 +421,12 @@
 
       img {
         width: 335px;
+        height: 314px;
+        background-color: $color-primary-light;
+      }
+
+      .img-2 {
+        background-color: rgba(255, 0, 0, 0);
       }
     }
 
